fix(metro): fixed fast refresh and hot reload

--- a/packages/css-to-rn/.eslintrc.json
+++ b/packages/css-to-rn/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": "../../.eslintrc.json",
   "ignorePatterns": [
     "!**/*",
-    "build"
+    "build",
+    "test/fixtures"
   ],
   "overrides": [
     {
