--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "@effect/experimental": "^0.23.3",
     "@microsoft/api-extractor": "^7.47.9",
     "@native-twin/cli": "workspace:*",
-    "@nx/eslint": "18.2.2",
-    "@nx/eslint-plugin": "18.2.2",
+    "@next/eslint-plugin-next": "^15.0.0",
+    "@nx/eslint": "^20.0.3",
+    "@nx/eslint-plugin": "^20.0.3",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.0",
@@ -60,8 +61,8 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.14.10",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "better-docs": "^2.7.3",
     "chai": "4.3.7",
@@ -87,7 +88,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "tsup": "^8.3.0",
-    "turbo": "^2.1.3",
+    "turbo": "^2.2.3",
     "typescript": "^5.5.4"
   },
   "packageManager": "yarn@4.4.1",
