--- a/packages/css/.eslintrc.json
+++ b/packages/css/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unused-vars": [
