--- a/packages/helpers/.eslintrc.json
+++ b/packages/helpers/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "build"],
   "overrides": [
     {
       "files": [
@@ -10,6 +10,8 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
+        "@typescript-eslint/no-unused-expressions": "off",
         "require-yield": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "no-var": "off",
