--- a/packages/jsx/.eslintrc.json
+++ b/packages/jsx/.eslintrc.json
@@ -13,6 +13,7 @@
         "plugin:@nx/react"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
         "prefer-const": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "unused-imports/no-unused-vars": "off",
