--- a/packages/language-server/.eslintrc.json
+++ b/packages/language-server/.eslintrc.json
@@ -15,6 +15,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-unused-expressions": "off",
         "@typescript-eslint/no-empty-function": "off",
         "require-yield": "off",
         "@typescript-eslint/ban-ts-comment": "off",
