--- a/packages/language-service/.eslintrc.json
+++ b/packages/language-service/.eslintrc.json
@@ -15,6 +15,8 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-unused-expressions": "off",
+        "@typescript-eslint/no-empty-object-type": "off",
         "@typescript-eslint/no-empty-function": "off",
         "require-yield": "off",
         "prefer-const": "off",
