--- a/packages/styled/.eslintrc.json
+++ b/packages/styled/.eslintrc.json
@@ -12,6 +12,8 @@
         "plugin:@nx/react"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
+        "@typescript-eslint/no-unsafe-function-type": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/no-explicit-any": "off",
