--- a/packages/ts-plugin/.eslintrc.json
+++ b/packages/ts-plugin/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
