--- a/packages/css-to-rn/.eslintrc.json
+++ b/packages/css-to-rn/.eslintrc.json
@@ -16,6 +16,7 @@
       "rules": {
         "no-empty": "off",
         "require-yield": "off",
+        "@typescript-eslint/no-empty-object-type": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-namespace": "off",
