--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -18,7 +18,8 @@
     ".": {
       "types": "./build/index.d.ts",
       "require": "./build/index.js",
-      "import": "./build/esm/index.js"
+      "import": "./build/esm/index.js",
+      "default": "./build/index.js"
     },
     "./package.json": "./package.json"
   },
