--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -39,7 +39,7 @@
     "@chialab/esbuild-rna": "^0.18.2",
     "@rollup/plugin-typescript": "^12.1.0",
     "@types/fs-extra": "11.0.4",
-    "esbuild": "^0.24.0",
+    "esbuild": "0.21.5",
     "minimist": "^1.2.8",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "sucrase": "^3.35.0",
