fix(compiler): platform stable

--- a/packages/builder/.eslintrc.json
+++ b/packages/builder/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-object-type": "off",
         "require-yield": "off",
         "no-case-declarations": "off",
         "@typescript-eslint/no-empty-interface": "off",
