--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -26,7 +26,7 @@
     "build:watch": "node esbuild.mjs --watch",
     "clean": "rm -rf build",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest --passWithNoTests",
+    "test": "echo \"No tests\"",
     "vscode:dev": "tsc -p tsconfig.build.json --watch"
   },
   "dependencies": {
