--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -25,6 +25,7 @@
     "expo-image": "~1.13.0",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
+    "react-compiler-runtime": "19.0.0-beta-8a03594-20241020",
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
