--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -81,6 +81,7 @@
     "@babel/helper-module-imports": "^7.22.15",
     "@babel/traverse": "^7.24.0",
     "@babel/types": "^7.24.0",
+    "@native-twin/compiler": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
