--- a/packages/css-to-rn/package.json
+++ b/packages/css-to-rn/package.json
@@ -13,6 +13,18 @@
       "require": "./build/node/index.js",
       "default": "./build/esm/node/index.js"
     },
+    "./metro": {
+      "types": "./build/node/metro/index.d.ts",
+      "import": "./build/esm/node/metro/index.js",
+      "require": "./build/node/metro/index.js",
+      "default": "./build/esm/node/metro/index.js"
+    },
+    "./babel": {
+      "types": "./build/node/babel/index.d.ts",
+      "import": "./build/esm/node/babel/index.js",
+      "require": "./build/node/babel/index.js",
+      "default": "./build/esm/node/babel/index.js"
+    },
     "./metro.babel.transformer": {
       "types": "./build/node/metro/transformers/metro.babel.transformer.js",
       "import": "./build/esm/node/metro/transformers/metro.babel.transformer.js",
@@ -49,7 +61,9 @@
     "@effect/language-service": "^0.2.0",
     "@native-twin/cli": "workspace:*",
     "@types/babel__helper-module-imports": "^7.18.3",
+    "@types/js-beautify": "^1",
     "babel-plugin-tester": "^11.0.4",
+    "js-beautify": "^1.15.1",
     "metro-react-native-babel-preset": "^0.77.0"
   },
   "optionalDependencies": {
