--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -29,6 +29,14 @@
   "main": "./build/index.js",
   "module": "./build/esm/index.js",
   "types": "./build/index.d.ts",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md",
+    "build",
+    "src",
+    "browser"
+  ],
   "scripts": {
     "build": "twin build",
     "build:esbuild:watch": "node esbuild.mjs --watch",
