--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -29,7 +29,9 @@
     "build",
     "LICENSE",
     "CHANGELOG.md",
-    "README.md"
+    "README.md",
+    "src",
+    "styled"
   ],
   "scripts": {
     "build": "twin build",
