--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -47,6 +47,11 @@
   "types": "./build/index.d.ts",
   "files": [
     "build",
+    "src",
+    "KeyMap",
+    "react",
+    "server",
+    "tree",
     "LICENSE",
     "CHANGELOG.md",
     "README.md"
