--- a/packages/native-twin/package.json
+++ b/packages/native-twin/package.json
@@ -46,14 +46,12 @@
   "types": "./build/index.d.ts",
   "files": [
     "build",
-    "index.d.ts",
-    "tailwind",
-    "tailwind.d.ts",
     "types.d.ts",
+    "src",
+    "expo-snack.js",
     "LICENSE",
     "README.md",
-    "CHANGELOG.md",
-    "expo-snack.js"
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "yarn twin build",
