--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "effect": "^3.10.0"
   },
   "devDependencies": {
+    "@changesets/changelog-git": "^0.2.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.9",
     "@effect/docgen": "^0.4.5",
