--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,11 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.3/schema.json",
-  "changelog": [
-    "@changesets/changelog-github",
-    {
-      "repo": "react-universal/native-twin"
-    }
-  ],
+  "changelog": "@changesets/changelog-git",
   "commit": false,
   "fixed": [
     [
