feat(build): workspace config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.3/schema.json",
-  "changelog": "@changesets/changelog-git",
+  "changelog": [
+    "@changesets/changelog-github",
+    {
+      "repo": "react-universal/native-twin"
+    }
+  ],
   "commit": false,
   "fixed": [
     [
