feat(build): dependencies

--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -58,14 +58,10 @@
     "@native-twin/helpers": "workspace:*",
     "@native-twin/language-service": "workspace:*",
     "code-block-writer": "^13.0.1",
-    "css-tree": "^2.3.1",
     "effect": "^3.10.0",
     "fast-check": "^3.21.0",
     "jiti": "1.21.0",
-    "recast": "^0.23.9",
-    "socket.io-client": "^4.7.5",
-    "sucrase": "^3.35.0",
-    "vscode-languageserver-textdocument": "^1.0.11"
+    "js-beautify": "^1.15.1"
   },
   "devDependencies": {
     "@babel/traverse": "^7.24.0",
